trying to fix bug on mobile where divs arent working prop

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,3 +70,8 @@ body {
 .image-container:hover .text-container {
   opacity: 1;
 }
+
+.icon{
+	width: 10%;
+	height: 10%;
+}
